--- a/index.html
+++ b/index.html
@@ -103,16 +103,15 @@
                                 <div class="floating-element element-3"></div>
                             </div>
                         </div>
+                        <div class="hero-social">
+                            <a href="https://www.linkedin.com/in/wasif-ahmad-5594a81ba" target="_blank" class="social-link">
+                                <i class="uil uil-linkedin-alt"></i>
+                            </a>
+                            <a href="https://github.com/Wasif581-create" target="_blank" class="social-link">
+                                <i class="uil uil-github-alt"></i>
+                            </a>
+                        </div>
                     </div>
-                </div>
-                
-                <div class="hero-social">
-                    <a href="https://www.linkedin.com/in/wasif-ahmad-5594a81ba" target="_blank" class="social-link">
-                        <i class="uil uil-linkedin-alt"></i>
-                    </a>
-                    <a href="https://github.com/Wasif581-create" target="_blank" class="social-link">
-                        <i class="uil uil-github-alt"></i>
-                    </a>
                 </div>
                 
                 <div class="scroll-indicator">
@@ -221,39 +220,39 @@
                         <div class="skills-grid">
                             <div class="skill-item">
                                 <div class="skill-icon">
-                                    <i class="fab fa-js"></i>
-                                </div>
-                                <span class="skill-name">JavaScript</span>
-                            </div>
-                            <div class="skill-item">
-                                <div class="skill-icon">
                                     <i class="fab fa-java"></i>
                                 </div>
                                 <span class="skill-name">Java</span>
                             </div>
                             <div class="skill-item">
                                 <div class="skill-icon">
-                                    <i class="fab fa-cuttlefish"></i>
+                                    <i class="fab fa-js"></i>
+                                </div>
+                                <span class="skill-name">JavaScript</span>
+                            </div>
+                            <div class="skill-item">
+                                <div class="skill-icon">
+                                    <i class="fab fa-react"></i>
                                 </div>
                                 <span class="skill-name">React</span>
                             </div>
                             <div class="skill-item">
                                 <div class="skill-icon">
-                                    <i class="fas fa-code"></i>
+                                    <i class="fab fa-js"></i>
                                 </div>
-                                <span class="skill-name">React type</span>
+                                <span class="skill-name">TypeScript</span>
                             </div>
                             <div class="skill-item">
                                 <div class="skill-icon">
-                                    <i class="fas fa-code"></i>
+                                    <i class="fab fa-react"></i>
                                 </div>
-                                <span class="skill-name">HTML</span>
+                                <span class="skill-name">Next.js</span>
                             </div>
                             <div class="skill-item">
                                 <div class="skill-icon">
-                                    <i class="fas fa-code"></i>
+                                    <i class="fab fa-cuttlefish"></i>
                                 </div>
-                                <span class="skill-name">CSS</span>
+                                <span class="skill-name">C++</span>
                             </div>
                         </div>
                     </div>
