--- a/index-v2.html
+++ b/index-v2.html
@@ -95,7 +95,7 @@
                     <div class="hero-image">
                         <div class="image-container">
                             <div class="image-background"></div>
-                            <img src="assets/img/profile.png" alt="Wasif Ahmad" class="profile-image">
+                            <img src="assets/img/prof.png" alt="Wasif Ahmad" class="profile-image">
                             <div class="image-effects">
                                 <div class="floating-element element-1"></div>
                                 <div class="floating-element element-2"></div>
