--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="hero-image">
                         <div class="image-container">
                             <div class="image-background"></div>
-                            <img src="assets/img/ppp.png" alt="Wasif Ahmad" class="profile-image">
+                            <img src="assets/img/prof.png" alt="Wasif Ahmad" class="profile-image">
                             <div class="image-effects">
                                 <div class="floating-element element-1"></div>
                                 <div class="floating-element element-2"></div>
@@ -143,7 +143,7 @@
                 <div class="about-content">
                     <div class="about-image">
                         <div class="about-img-container">
-                            <img src="assets/img/ppp.png" alt="About Wasif" class="about-img">
+                            <img src="assets/img/prof.png" alt="About Wasif" class="about-img">
                             <div class="about-decoration"></div>
                         </div>
                     </div>
